tdf#141333 use a vertical step increment of one row height

for font feature scrolled window

Change-Id: I000d53af7128377930644591a096c94366da281b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/113465
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>